--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -39,7 +39,8 @@ download data, and embed charts on your site.{% endblock %}
     <p>Our library of charts gives you insight into land data from provinces you research. Look for them on profile pages. You can embed the charts on your own site. </p>
   </div>
   <div class="column-third">
-    <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/visualization.svg' %}"/></span></p>
+    <p><span class="img-bg rounded bg-color-primary">
+      <img src="{% static 'img/icons/blurbs/visualization.svg' %}"/></span></p>
     <h3>Get Context</h3>
     <p>Pre-computed land statistics are presented alongside each data point so you can see how each place fits into a large context.</p>
   </div>
@@ -55,6 +56,16 @@ download data, and embed charts on your site.{% endblock %}
   }
   .section-container {
     background-color: #fff;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    border-top: 1px solid #aed4df;
+  }
+  .section-container img {
+    max-width: 30px;
+  }
+  .bg-gradient-background {
+    background-image: linear-gradient(to right, #0e4b49, #16635f, #269a92);
+    color: white;
   }
 </style>
 {% endblock %}
