move html style to scss file

--- a/hurumap_land/templates/blocks/showcase.html
+++ b/hurumap_land/templates/blocks/showcase.html
@@ -3,7 +3,7 @@
   style="border-top: 1px solid #aed4df; height: 900px;">
   <div style="top: -7.5%;position: relative;">
   <p>
-    <span class="img-bg rounded bg-gradient-background" style="font-size:13px">
+    <span class="img-bg rounded .bg-color-gradient" style="font-size:13px">
     <img src="{% static 'img/icons/blurbs/story.svg' %}"/><br/>STORIES</span></p>
     <h1 class="text-center section-title">Story Showcase</h1>
     <div class="story" style="width: 100%; padding: 3% 6%;">
