--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -36,6 +36,9 @@ span.img-bg {
   padding: 24px;
 }
 
+.text-uppercase {
+  text-transform: uppercase!important;
+}
 
 // Footer
 
@@ -53,9 +56,12 @@ span.img-bg {
 }
 
 .grayscale {
-    filter: grayscale(100%);
-    -webkit-filter: grayscale(100%);
-    z-index: -1;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+  &:hover {
+    filter: grayscale(0%);
+    -webkit-filter: grayscale(0%); /* Chrome 19+ & Safari 6+ */
+  }
 }
 
 .bg-color-gradient {
@@ -65,6 +71,8 @@ span.img-bg {
 
 .showcase-story {
   text-align: center;
+  position: relative;
+
    a {
     text-decoration: none;
     border-radius: 24px;
@@ -76,8 +84,51 @@ span.img-bg {
     font-weight: bold;
     border: 0px;
   }
+
+}
+
+.showcase-stories {
+  top: -12%;
+  position: relative;
+  padding: 4% 6%;
+
   hr {
     border-color: #aed4df;
+    margin: 2em 0;
+
+  }
+}
+
+.showcase-story-full {
+  width: 100%;
+  padding-top: 3%;
+
+  .showcase-story-title {
+      left: 25%;
+      top: 50%;
+  }
+}
+
+.showcase-story-half {
+  width: 50%;
+  float:left;
+}
+
+.story-right {
+  padding-left: 3%;
+
+  .showcase-story-title {
+      left: 36%;
+      top: 40%;
+  }
+}
+
+.story-left {
+  padding-right: 3%;
+
+  .showcase-story-title {
+      left: 25%;
+      top: 40%;
   }
 }
 
@@ -87,6 +138,7 @@ span.img-bg {
   background-color: #279c94;
   max-width: 50%;
   display: inline-block;
+  position: absolute;
 }
 
 // Stories Showcase
