--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -8,6 +8,8 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
+$brand-color-primary: #0e4a48;
+
 // Heading font
 h1 {
   font-family: 'Raleway', sans-serif;
@@ -34,10 +36,15 @@ h1 {
 span.img-bg {
   display: inline-block;
   padding: 24px;
+  font-size:12px;
 }
 
 .text-uppercase {
   text-transform: uppercase!important;
+}
+
+.text-primary {
+  color: $brand-color-primary
 }
 
 // Footer
@@ -69,6 +76,27 @@ span.img-bg {
   color: white;
 }
 
+.section-container {
+  background-color: #fff;
+  border-top: 1px solid #aed4df
+}
+
+//story showcase
+.showcase-stories {
+  top: -9.5%;
+  position: relative;
+  padding: 4% 6%;
+
+  hr {
+    border-color: #aed4df;
+    margin: 2em 0;
+
+  }
+}
+.showcase-stories .img-bg img {
+  max-width: 30px;
+}
+
 .showcase-story {
   text-align: center;
   position: relative;
@@ -83,20 +111,10 @@ span.img-bg {
     font-size: 13px;
     font-weight: bold;
     border: 0px;
+    position: absolute;
+    bottom: 15%;
   }
 
-}
-
-.showcase-stories {
-  top: -12%;
-  position: relative;
-  padding: 4% 6%;
-
-  hr {
-    border-color: #aed4df;
-    margin: 2em 0;
-
-  }
 }
 
 .showcase-story-full {
@@ -107,11 +125,18 @@ span.img-bg {
       left: 25%;
       top: 50%;
   }
+  .img-story {
+    height: 400px;
+  }
 }
 
 .showcase-story-half {
   width: 50%;
   float:left;
+
+  .img-story {
+    height: 200px;
+  }
 }
 
 .story-right {
@@ -139,27 +164,24 @@ span.img-bg {
   max-width: 50%;
   display: inline-block;
   position: absolute;
+
 }
 
-// Stories Showcase
-.showcase.stories {
-  .img {
-    display: flex;
-    height: auto;
-    min-height: 200px;
-    padding: 15px 15px;
-    h2 {
-      display: inline-block;
-      width: 100%;
-      max-width: 400px;
-      margin: auto auto 0;
-      padding: 5px 10px;
+//PARTNERS
+.partners-section {
+  top: -24%;
+  position: relative;
+  padding: 4% 6%;
+}
+.partners-section .img-bg {
+  padding:20px 18px;
 
-      background-color: #1c9d95;
-      color: #fff;
-
-      text-transform: uppercase;
-      text-align: center;
-    }
+  img {
+    max-width: 40px
   }
+}
+.patners-logo img {
+  margin: 10px 20px;
+  max-width: 150px;
+  max-height: 70px;
 }
