--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -21,12 +21,13 @@ download data, and embed charts on your site.{% endblock %}
 
   <div class="clearfix">
       <div id="slippy-map"></div>
-      <div id="map-div" class="map-box">
-        <i class="fa fa-times" style="float:right;margin-top:-18px; margin-right:-20px"
-         onclick="javascript:$('#map-div').css('display', 'none')"></i>
+      <div id="map-div" class="map-explainer">
+        <i class="fa fa-times cross"
+        onclick="javascript:$('#map-div').css('display', 'none')"></i>
          <div style="padding-bottom: 2%">
-            <h2 class="font-weight-bold" style="border-bottom: 2px solid; font-size: 2em">
+            <h2 class="font-weight-bold" style="font-size: 2em">
               Discover the stories behind <br/> our <span style="color: #269a92;">land</span></h2>
+            <hr>
         </div>
         <p>{{ HURUMAP.name }} gives journalist and civic activists
           useful facts and data about land ownership in South Africa</p>
@@ -68,32 +69,6 @@ download data, and embed charts on your site.{% endblock %}
 
   {% include 'blocks/partners.html' with extra_css_class='bg-tan' %}
 
-  <style>
-    .map-box {
-      position: fixed;
-      top: 18%;
-      left: 33%;
-      border-radius: 2px;
-      width: 33%;
-      height: auto;
-      background-color: #ffffff;
-      padding: 2% 3% 1%;
-      text-align: center;
-      color: rgb(8, 74, 73);
-      box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.23);
-    }
-    button {
-      border-radius: 24px;
-      padding: .6rem 1.25rem;
-      max-width: 100%;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      font-size: 13px;
-      color: #fff;
-      border: 0px;
-      background-image: linear-gradient(to right, #0e4b49, #16635f, #269a92);
-    }
-  </style>
 
 {% endblock content_container %}
 
