fix floating div position

--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -41,7 +41,7 @@ span.img-bg {
 
 //floating box
 .map-explainer {
-  position: fixed;
+  position: absolute;
   top: 18%;
   left: 33%;
   border-radius: 2px;
