changed floating div link

--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -65,7 +65,7 @@ span.img-bg {
     margin: 0
   }
 
-  button {
+  a {
     border-radius: 24px;
     padding: .6rem 1.25rem;
     max-width: 100%;
