--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -31,9 +31,10 @@ download data, and embed charts on your site.{% endblock %}
         </div>
         <p>{{ HURUMAP.name }} gives journalist and civic activists
           useful facts and data about land ownership in South Africa</p>
-        <button class="btn btn-primary btn-sm text-uppercase font-weight-light">
-          SEARCH RESULTS
-        </button>
+        <a class="btn btn-primary btn-sm text-uppercase font-weight-light"
+        href="{{HURUMAP.url}}/profiles/country-ZA-south-africa/">
+          EXPLORE SOUTH AFRICA
+        </a>
 
       </div>
   </div>
