--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -73,6 +73,7 @@ span.img-bg {
     overflow: hidden;
     font-size: 13px;
     color: #fff;
+    font-weight: 600;
     border: 0px;
     background-color: $brand-color-solid-light-green;
   }
