--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -1,4 +1,4 @@
-/* 
+/*
  * HURUmap Land SCSS
  * -----------------
  * Customizations for HURUmap Land site
@@ -44,6 +44,9 @@ span.img-bg {
 }
 
 // Homepage
+.bg-white {
+  background-color: #fff;
+}
 
 // How it works
 .how-it-works {
