--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -8,6 +8,8 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
+$brand-color-green: #279c94;
+
 
 // Heading font
 h1 {
@@ -48,6 +50,30 @@ span.img-bg {
 .home-nav img {
   max-width: 30px;
 }
+
+.home-nav ul li {
+  float: left;
+  padding:0 6%
+}
+
+.home-nav ul li a {
+  display: block;
+  padding-left: 20px;
+  font-size:12px;
+}
+
+.home-nav ul li a span:hover {
+  background-image: linear-gradient(to right, #0e4b49, #16635f, #269a92);
+}
+
+.home-nav ul li a span.active {
+  background-image: linear-gradient(to right, #0e4b49, #16635f, #269a92);
+}
+
+.home-nav ul li a span {
+  background-color: $brand-color-green;
+}
+
 .bg-color-white {
   background-color: #fff;
 }
@@ -64,7 +90,7 @@ span.img-bg {
 }
 
 .bg-color-green {
-  background-color: #279c94;
+  background-color: $brand-color-green;
 }
 // How it works
 .how-it-works {
