nav href links div section id

--- a/hurumap_land/templates/blocks/partners.html
+++ b/hurumap_land/templates/blocks/partners.html
@@ -1,4 +1,4 @@
-<div class="showcase partners clearfix partners {{ extra_css_class }}">
+<div id="partners" class="showcase partners clearfix partners {{ extra_css_class }}">
     <div class="wrapper text-center">
         <h1>Partners</h1>
         <p>{{ HURUMAP.name }} is made possible through support from the following partners:</p>
@@ -17,6 +17,6 @@
 
 <style>
   .showcase.partners img {
-    margin: 10px 20px; 
+    margin: 10px 20px;
   }
 </style>
