--- a/hurumap_land/templates/blocks/showcase.html
+++ b/hurumap_land/templates/blocks/showcase.html
@@ -1,5 +1,5 @@
 <a name="showcase"></a>
-<div class="showcase stories {{ extra_css_class }}">
+<div id="showcase-stories" class="showcase stories {{ extra_css_class }}">
     <div class="container-narrow clearfix">
         <h1 class="text-center">Story Showcase</h1>
         <p></p>
@@ -10,7 +10,7 @@
                 <div class="img" style="background-image: url('{{ story.img }}');" style="display: flex;">
                     <h2><span>{{ story.title }}</span></h2>
                 </div>
-                
+
                 <p class="text-muted">By {{ story.author }}</p>
                 <p>{{ story.brief }}</p>
                 <br/>
