--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -36,21 +36,21 @@ download data, and embed charts on your site.{% endblock %}
           <span class="img-bg rounded text-white" style="padding: 20px 27px; line-height: 2">
           <img src="{% static 'img/icons/blurbs/papyrus.svg'%}"/>
           <br/>ABOUT</span></a></li>
-      <li><a>
+      <li><a href="/#slippy-map">
           <span class="img-bg rounded text-white" style="padding: 20px 32px; line-height: 2">
           <img src="{% static 'img/icons/blurbs/map.svg' %}"/><br/>MAP</span>
         </a></li>
-      <li><a>
+      <li><a href='/#showcase-stories'>
           <span class="img-bg rounded text-white" style="padding: 20px 24px;line-height: 2">
           <img src="{% static 'img/icons/blurbs/story.svg' %}"/><br/>STORIES</span>
         </a></li>
-      <li><a>
+      <li><a href='/#partners'>
           <span class="img-bg rounded text-white" style="padding: 23px 18px; line-height: 1">
           <img style="max-width: 41px; margin-top: -5px" src="{% static 'img/icons/blurbs/group.png' %}"/><br>PARTNERS</span>
         </a></li>
     </ul>
   </div>
-  <div class="showcase how-it-works bg-white text-center">
+  <div class="showcase how-it-works bg-color-white text-center">
     {% block how_it_works %}
     <div class="wrapper clearfix how-it-works">
       <h1>How It Works</h1>
