add right arrow on banner

--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -34,6 +34,9 @@ download data, and embed charts on your site.{% endblock %}
         <a class="btn btn-primary btn-sm text-uppercase font-weight-light"
         href="{{HURUMAP.url}}/profiles/country-ZA-south-africa/">
           EXPLORE SOUTH AFRICA
+          <img class="border-0" src="{% static 'img/icons/blurbs/button-arrow.svg' %}"
+           alt="button arrow"
+           style="height:15px; width: 18px; box-shadow: none; object-fit: contain;">
         </a>
 
       </div>
