--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -88,5 +88,13 @@ download data, and embed charts on your site.{% endblock %}
 {% block homepage_javascripb_libs %}
 {{ block.super }}
 <script src="{% static 'js/maps_mapit.js' %}"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    $('.img-bg').on('click', function () {
+      $('.img-bg').not(this).removeClass('active');
+      $(this).toggleClass('active');
+    });
+  });
+</script>
 
 {% endblock %}
