--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -29,24 +29,24 @@ download data, and embed charts on your site.{% endblock %}
       <div id="slippy-map"></div>
   </div>
   <div class="home-nav text-center section-container bg-color-white">
-    <ul style="list-style-type: none;display: block; margin: 0;padding-left: 15%;overflow: hidden; display: inline-block; width: 100%; margin-top: -3%;
-    z-index: 1;
-    position: relative;">
+    <ul>
       <li><a>
-          <span class="img-bg rounded text-white" style="padding: 20px 27px; line-height: 2">
+          <span class="img-bg rounded text-white" style="padding: 20px 27px;">
           <img src="{% static 'img/icons/blurbs/papyrus.svg'%}"/>
           <br/>ABOUT</span></a></li>
       <li><a href="/#slippy-map">
-          <span class="img-bg rounded text-white" style="padding: 20px 32px; line-height: 2">
+          <span class="img-bg rounded text-white" style="padding: 20px 32px;">
           <img src="{% static 'img/icons/blurbs/map.svg' %}"/><br/>MAP</span>
         </a></li>
       <li><a href='/#showcase-stories'>
-          <span class="img-bg rounded text-white" style="padding: 20px 24px;line-height: 2">
+          <span class="img-bg rounded text-white" style="padding: 20px 24px;">
           <img src="{% static 'img/icons/blurbs/story.svg' %}"/><br/>STORIES</span>
         </a></li>
       <li><a href='/#partners'>
-          <span class="img-bg rounded text-white" style="padding: 23px 18px; line-height: 1">
-          <img style="max-width: 41px; margin-top: -5px" src="{% static 'img/icons/blurbs/group.png' %}"/><br>PARTNERS</span>
+          <span class="img-bg rounded text-white"
+          style="padding: 23px 18px; line-height: 1">
+          <img style="max-width: 41px; margin-top: -5px"
+          src="{% static 'img/icons/blurbs/group.png' %}"/><br>PARTNERS</span>
         </a></li>
     </ul>
   </div>
