about nav icon link to about page

--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -30,19 +30,19 @@ download data, and embed charts on your site.{% endblock %}
   </div>
   <div class="home-nav text-center section-container bg-color-white">
     <ul>
-      <li><a>
+      <li><a href='/about'>
           <span class="img-bg rounded text-white" style="padding: 20px 27px;">
           <img src="{% static 'img/icons/blurbs/papyrus.svg'%}"/>
           <br/>ABOUT</span></a></li>
-      <li><a href="/#slippy-map">
+      <li><a href="#slippy-map">
           <span class="img-bg rounded text-white" style="padding: 20px 32px;">
           <img src="{% static 'img/icons/blurbs/map.svg' %}"/><br/>MAP</span>
         </a></li>
-      <li><a href='/#showcase-stories'>
+      <li><a href='#showcase-stories'>
           <span class="img-bg rounded text-white" style="padding: 20px 24px;">
           <img src="{% static 'img/icons/blurbs/story.svg' %}"/><br/>STORIES</span>
         </a></li>
-      <li><a href='/#partners'>
+      <li><a href='#partners'>
           <span class="img-bg rounded text-white"
           style="padding: 23px 18px; line-height: 1">
           <img style="max-width: 41px; margin-top: -5px"
