--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -1,4 +1,4 @@
-/* 
+/*
  * HURUmap Land SCSS
  * -----------------
  * Customizations for HURUmap Land site
@@ -23,6 +23,9 @@ h1 {
 }
 .font-weight-bold {
   font-weight: 700;
+}
+.text-white {
+    color: white;
 }
 
 // Rounded radius
@@ -53,24 +56,106 @@ span.img-bg {
 }
 
 // Stories Showcase
-.showcase.stories {
-  .img {
-    display: flex;
-    height: auto;
-    min-height: 200px;
-    padding: 15px 15px;
-    h2 {
-      display: inline-block;
-      width: 100%;
-      max-width: 400px;
-      margin: auto auto 0;
-      padding: 5px 10px;
+.showcase-stories {
+  top: -13%;
+  position: relative;
+  padding: 4% 15%;
 
-      background-color: #1c9d95;
-      color: #fff;
+  hr {
+    border-color: #aed4df;
+    margin: 2em 0;
 
-      text-transform: uppercase;
-      text-align: center;
-    }
   }
+}
+.showcase-stories .img-bg {
+  font-size:12px;
+   img {
+     max-width: 30px;
+   }
+}
+
+.showcase-story {
+  text-align: center;
+  position: relative;
+
+   a {
+    text-decoration: none;
+    border-radius: 24px;
+    padding: .6rem 1.25rem;
+    max-width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    font-size: 13px;
+    font-weight: bold;
+    border: 0px;
+    position: absolute;
+    bottom: 15%;
+  }
+
+}
+
+.showcase-story-full {
+  padding-top: 3%;
+
+  .showcase-story-title {
+      left: 25%;
+      top: 50%;
+  }
+  .img-story {
+    height: 400px;
+  }
+}
+
+.showcase-story-half {
+  float:left;
+
+  .img-story {
+    height: 200px;
+  }
+}
+
+.story-right {
+  padding-left: 3%;
+
+  .showcase-story-title {
+      left: 36%;
+      top: 40%;
+  }
+}
+
+.story-left {
+  padding-right: 3%;
+
+  .showcase-story-title {
+      left: 25%;
+      top: 40%;
+  }
+}
+
+.showcase-story-title {
+  padding: 3px 8px;
+  color: white;
+  background-color: #279c94;
+  max-width: 50%;
+  display: inline-block;
+  position: absolute;
+
+}
+
+.grayscale {
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+  &:hover {
+    filter: grayscale(0%);
+    -webkit-filter: grayscale(0%); /* Chrome 19+ & Safari 6+ */
+  }
+}
+
+.bg-color-gradient {
+  background-image: linear-gradient(to right, #0e4b49, #16635f, #269a92);
+}
+
+.section-container {
+  background-color: #fff;
+  border-top: 1px solid #aed4df
 }
