--- a/hurumap_land/templates/blocks/showcase.html
+++ b/hurumap_land/templates/blocks/showcase.html
@@ -9,8 +9,8 @@
         <div class="img-story grayscale"
          style="background-image: url('{{ HURUMAP.showcase_stories.0.img }}');">
         </div>
-        <div class="showcase-story-title">
-          <h2 class="text-uppercase">
+        <div class="showcase-story-title text-center">
+          <h2 class="text-uppercase bg-color-solid-green">
             <span>{{ HURUMAP.showcase_stories.0.title }}</span></h2>
         </div>
         <a class="bg-color-gradient text-white"
@@ -23,8 +23,9 @@
       <div class="img-story grayscale"
        style="background-image: url('{{ HURUMAP.showcase_stories.1.img }}');">
       </div>
-      <div class="showcase-story-title">
-        <h2 class="text-uppercase"><span>Climate Change</span></h2>
+      <div class="showcase-story-title text-center">
+        <h2 class="text-uppercase bg-color-solid-green">
+          <span>{{ HURUMAP.showcase_stories.1.title }}</span></h2>
       </div>
       <a class="bg-color-gradient text-white"
        href="{{ HURUMAP.showcase_stories.1.link }}"
@@ -35,8 +36,9 @@
       <div class="img-story grayscale"
        style="background-image: url('{{ HURUMAP.showcase_stories.2.img }}');">
       </div>
-      <div class="showcase-story-title">
-        <h2 class="text-uppercase"><span>Land Reform</span></h2>
+      <div class="showcase-story-title text-center">
+        <h2 class="text-uppercase bg-color-solid-green">
+          <span>{{ HURUMAP.showcase_stories.2.title }}</span></h2>
       </div>
       <a class="bg-color-gradient text-white"
        href="{{ HURUMAP.showcase_stories.2.link }}"
